lvchao refined crop and upload for avatar, and used reactjs to display error messages

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,9 @@ jrebel.lic
 
 # nodejs specific
 /src/main/webapp/app/node_modules
+
+# uploads specific
+/uploads
+
+# jsx precompile specific
+/src/main/webapp/assets/js/build
