lvchao added admin module

--- a/src/main/webapp/app/common/bower.json
+++ b/src/main/webapp/app/common/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.1-SNAPSHOT",
   "dependencies": {
     "jquery": "latest",
-    "semantic-ui": "latest"
+    "semantic-ui": "latest",
+    "webix": "~2.2.3"
   }
 }
