lvchao migrated from Postgres to MySQL

--- a/src/main/resources/c3p0.properties
+++ b/src/main/resources/c3p0.properties
@@ -1,5 +1,5 @@
-c3p0.driverClass=org.postgresql.Driver
-c3p0.jdbcUrl=jdbc:postgresql://localhost/freeour
+c3p0.driverClass=com.mysql.jdbc.Driver
+c3p0.jdbcUrl=jdbc:mysql://localhost:3306/freeour?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=UTF-8&amp;characterSetResults=utf8&amp;connectionCollation=utf8_general_ci
 c3p0.user=freeour
 c3p0.password=servicerequest
 c3p0.minPoolSize=1
