--- a/src/main/resources/wechat.properties
+++ b/src/main/resources/wechat.properties
@@ -1,7 +1,8 @@
-wechat.appid=wxeaee63wg2gs4w4y6s
-wechat.secret=3yjgejgarho4oy34opwhyo4
+wechat.appid=wx2f99793514cee788
+wechat.secret=682a10ef0f955313b94ac3b120fbf850
 wechat.api.create.preauthcode=https://api.weixin.qq.com/cgi-bin/component/api_create_preauthcode?component_access_token=#component_access_token
 wechat.api.component.token=https://api.weixin.qq.com/cgi-bin/component/api_component_token
 wechat.api.oauth2.access.token=https://api.weixin.qq.com/sns/oauth2/access_token?appid=#appid&secret=#secret&code=#code&grant_type=authorization_code
 wechat.api.userinfo=https://api.weixin.qq.com/sns/userinfo?access_token=#access_token&openid=#openid&lang=zh_CN
 wechat.api.oauth2.refresh.token=https://api.weixin.qq.com/sns/oauth2/refresh_token?appid=#appid&grant_type=refresh_token&refresh_token=#refresh_token
+wechat.api.access.token=https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid=#appid&secret=#secret
